x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low

  [ Mike DePaulo ]
  * New upstream release (4.0.4.0):
    - Windows: Include debug build in the regular installer.
      It is an optional component during the install. It is not
      installed by default.
    - Windows: Include Pageant and PuTTYgen in the installer.
      They are optional components during the install. They are
      installed by default.
    - Windows: Add descriptions for the "components" in the installer
      (English language only at this time)
    - Windows: You can now view the version and some other info by:
      right-click on the installer -> Properties -> Details
      (English language only at this time)
    - Windows: Upgrade bundled PulseAudio from 5.0-rev18 to 6.0-11.1
      (No known impacts to X2Go, except for the fact that many needed
       patches are now included in upstream PulseAudio.)
    - Windows: Update bundled VcXsrv from 1.15.2.2-xp+vc2013+x2go1 to
      1.15.2.6 (X2Go/Arctica Build)
      Note that X2Go Client for Windows 4.0.3.2-20150508 has this update
      also.
      The differences relevant to X2Go are:
        + CVE-2015-0255 was fixed in VcXsrv itself
        + CVE-2015-3418 was fixed in VcXsrv itself
        + Font files no longer differ in each build due to timestamp
          differences
        + VcXsrv's bundled version of openssl was updated from 1.0.1k
          to 1.0.1m (fixes the multiple CVEs announced on 2015-03-19)
        + VcXsrv's bundled version of libXfont was updated from 1.4.8
          to 1.4.9 (Fixes CVE-2015-1802 through CVE-2015-1804)
        + VcXsrv's bundled version of freetype was updated from 2.5.3
          to 2.5.5 (fixes CVE-2014-9656 through CVE-2014-9675)
    - Windows: Update bundled Win32 OpenSSL from 1.0.1L to 1.0.1m,
      which fixes the multiple CVEs announced on 2015-03-19.
      Note that X2Go Client for Windows 4.0.3.2-20150329 has this update
      also.
    - Windows: Update bundled PuTTY from 0.63 to 0.64.